# GP

./: .gitignore  .gitmodules  CMakeLists.txt  Cov.h  CovFunc.h  CovSEard.cpp  CovSEard.h  CovSEiso.h  FITC.cpp  FITC.h  GP.cpp  GP.h  MatrixSolver.cpp  MatrixSolver.h  README.md  VFE.cpp  VFE.h  def.h  mygp.cpp  pengbo.cpp  test_fitc.cpp  test_vfe.cpp  test_y  train_x  train_y  util.cpp  util.h
Cov/: Cov.h  CovSEard.cpp  CovSEard.h  CovSEiso.cpp  CovSEiso.h
data/: test_x
